--- a/frontend/main/bower.json
+++ b/frontend/main/bower.json
@@ -12,7 +12,8 @@
     "moment": "^2.15.0",
     "angular-local-storage": "^0.5.0",
     "ngActivityIndicator": "^0.1.10",
-    "angularUtils-pagination": "angular-utils-pagination#^0.11.1"
+    "angularUtils-pagination": "angular-utils-pagination#^0.11.1",
+    "selectize": "^0.12.4"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
