--- a/backend/WEB API Main/Main/WEB API.csproj
+++ b/backend/WEB API Main/Main/WEB API.csproj
@@ -187,6 +187,10 @@
     <Compile Include="Auth\SimpleAuthorizationServerProvider.cs" />
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\CQAController.cs" />
+    <Compile Include="Controllers\catConcernTypeController.cs" />
+    <Compile Include="Controllers\catStatusController.cs" />
+    <Compile Include="Controllers\catResultController.cs" />
+    <Compile Include="Controllers\CustomerController.cs" />
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
