--- a/frontend/main/bower.json
+++ b/frontend/main/bower.json
@@ -13,7 +13,8 @@
     "angular-local-storage": "^0.5.0",
     "ngActivityIndicator": "^0.1.10",
     "angularUtils-pagination": "angular-utils-pagination#^0.11.1",
-    "selectize": "^0.12.4"
+    "selectize": "^0.12.4",
+    "angular-file-upload": "^2.4.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
