--- a/backend/Reusable/Reusable.csproj
+++ b/backend/Reusable/Reusable.csproj
@@ -55,13 +55,17 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reusable\BaseDocument.cs" />
+    <Compile Include="Reusable\ReadOnlyBaseLogic.cs" />
+    <Compile Include="Reusable\IReadOnlyBaseLogic.cs" />
     <Compile Include="Reusable\IRecursiveEntity.cs" />
     <Compile Include="Reusable\BaseEntity.cs" />
     <Compile Include="Reusable\BaseLogic.cs" />
     <Compile Include="Reusable\Entities\Gridster.cs" />
     <Compile Include="Reusable\IBaseLogic.cs" />
     <Compile Include="Reusable\ICatalogContainer.cs" />
+    <Compile Include="Reusable\IReadOnlyRepository.cs" />
     <Compile Include="Reusable\LoggedUser.cs" />
+    <Compile Include="Reusable\ReadOnlyRepository.cs" />
     <Compile Include="Reusable\Repository.cs" />
     <Compile Include="Reusable\CommonResponse.cs" />
     <Compile Include="Reusable\IEntity.cs" />
