--- a/backend/WEB API Main/Main/WEB API.csproj
+++ b/backend/WEB API Main/Main/WEB API.csproj
@@ -188,6 +188,7 @@
     <Compile Include="App_Start\Startup.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Auth\SimpleAuthorizationServerProvider.cs" />
+    <Compile Include="Controllers\ReadOnlyBaseController.cs" />
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\CQALineController.cs" />
     <Compile Include="Controllers\CQAController.cs" />
@@ -195,6 +196,7 @@
     <Compile Include="Controllers\catStatusController.cs" />
     <Compile Include="Controllers\catResultController.cs" />
     <Compile Include="Controllers\CustomerController.cs" />
+    <Compile Include="Controllers\FSCustomerController.cs" />
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
