--- a/backend/Business Specific Logic/packages.config
+++ b/backend/Business Specific Logic/packages.config
@@ -3,5 +3,6 @@
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net452" />
   <package id="NIdenticon" version="1.2.1.0" targetFramework="net452" />
 </packages>
