--- a/backend/Business Specific Logic/Business Specific Logic.csproj
+++ b/backend/Business Specific Logic/Business Specific Logic.csproj
@@ -38,6 +38,10 @@
       <HintPath>..\WEB API Main\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="LinqKit, Version=1.1.9.0, Culture=neutral, PublicKeyToken=bc217f8844052a91, processorArchitecture=MSIL">
+      <HintPath>..\WEB API Main\packages\LinqKit.1.1.9.0\lib\net45\LinqKit.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.AspNet.Identity.Core, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\WEB API Main\packages\Microsoft.AspNet.Identity.Core.2.2.1\lib\net45\Microsoft.AspNet.Identity.Core.dll</HintPath>
       <Private>True</Private>
@@ -93,6 +97,8 @@
     <Compile Include="FS\FSContext.cs" />
     <Compile Include="FS\FSEntity.cs" />
     <Compile Include="FS\FSReadOnlyRepository.cs" />
+    <Compile Include="FS\Item\FSItemLogic.cs" />
+    <Compile Include="FS\Item\FSItem.cs" />
     <Compile Include="Logic\catConcernTypeLogic.cs" />
     <Compile Include="Logic\catResultLogic.cs" />
     <Compile Include="Logic\catStatusLogic.cs" />
