--- a/backend/Reusable/Reusable.csproj
+++ b/backend/Reusable/Reusable.csproj
@@ -44,6 +44,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -53,6 +54,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Attachments\Attachment.cs" />
+    <Compile Include="Attachments\AttachmentsIO.cs" />
+    <Compile Include="Attachments\IAttachment.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reusable\BaseDocument.cs" />
     <Compile Include="Reusable\ReadOnlyBaseLogic.cs" />
@@ -74,6 +78,7 @@
     <Compile Include="Reusable\Entities\Track.cs" />
     <Compile Include="Reusable\Trackable.cs" />
     <Compile Include="Reusable\Entities\User.cs" />
+    <Compile Include="Utils\MD5HashGenerator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
