--- a/backend/Business Specific Logic/Business Specific Logic.csproj
+++ b/backend/Business Specific Logic/Business Specific Logic.csproj
@@ -144,6 +144,10 @@
     <Compile Include="Migrations\201704201730376_CQALineAttachments.Designer.cs">
       <DependentUpon>201704201730376_CQALineAttachments.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201704211833389_CustomerNumber.cs" />
+    <Compile Include="Migrations\201704211833389_CustomerNumber.Designer.cs">
+      <DependentUpon>201704211833389_CustomerNumber.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\AuthConfiguration\201703272102025_InitialCreate.cs" />
     <Compile Include="Migrations\AuthConfiguration\201703272102025_InitialCreate.Designer.cs">
       <DependentUpon>201703272102025_InitialCreate.cs</DependentUpon>
@@ -182,6 +186,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201704201730376_CQALineAttachments.resx">
       <DependentUpon>201704201730376_CQALineAttachments.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201704211833389_CustomerNumber.resx">
+      <DependentUpon>201704211833389_CustomerNumber.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\AuthConfiguration\201703272102025_InitialCreate.resx">
       <DependentUpon>201703272102025_InitialCreate.cs</DependentUpon>
