--- a/backend/Reusable/Reusable.csproj
+++ b/backend/Reusable/Reusable.csproj
@@ -57,27 +57,28 @@
     <Compile Include="Attachments\Attachment.cs" />
     <Compile Include="Attachments\AttachmentsIO.cs" />
     <Compile Include="Attachments\IAttachment.cs" />
+    <Compile Include="Email\Email.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Reusable\BaseDocument.cs" />
-    <Compile Include="Reusable\ReadOnlyBaseLogic.cs" />
-    <Compile Include="Reusable\IReadOnlyBaseLogic.cs" />
-    <Compile Include="Reusable\IRecursiveEntity.cs" />
-    <Compile Include="Reusable\BaseEntity.cs" />
-    <Compile Include="Reusable\BaseLogic.cs" />
-    <Compile Include="Reusable\Entities\Gridster.cs" />
-    <Compile Include="Reusable\IBaseLogic.cs" />
-    <Compile Include="Reusable\ICatalogContainer.cs" />
-    <Compile Include="Reusable\IReadOnlyRepository.cs" />
-    <Compile Include="Reusable\LoggedUser.cs" />
-    <Compile Include="Reusable\ReadOnlyRepository.cs" />
-    <Compile Include="Reusable\Repository.cs" />
-    <Compile Include="Reusable\CommonResponse.cs" />
-    <Compile Include="Reusable\IEntity.cs" />
-    <Compile Include="Reusable\IRepository.cs" />
-    <Compile Include="Reusable\Entities\Sort.cs" />
-    <Compile Include="Reusable\Entities\Track.cs" />
-    <Compile Include="Reusable\Trackable.cs" />
-    <Compile Include="Reusable\Entities\User.cs" />
+    <Compile Include="CRUD\BaseDocument.cs" />
+    <Compile Include="CRUD\ReadOnlyBaseLogic.cs" />
+    <Compile Include="CRUD\IReadOnlyBaseLogic.cs" />
+    <Compile Include="CRUD\IRecursiveEntity.cs" />
+    <Compile Include="CRUD\BaseEntity.cs" />
+    <Compile Include="CRUD\BaseLogic.cs" />
+    <Compile Include="CRUD\Entities\Gridster.cs" />
+    <Compile Include="CRUD\IBaseLogic.cs" />
+    <Compile Include="CRUD\ICatalogContainer.cs" />
+    <Compile Include="CRUD\IReadOnlyRepository.cs" />
+    <Compile Include="CRUD\LoggedUser.cs" />
+    <Compile Include="CRUD\ReadOnlyRepository.cs" />
+    <Compile Include="CRUD\Repository.cs" />
+    <Compile Include="CRUD\CommonResponse.cs" />
+    <Compile Include="CRUD\IEntity.cs" />
+    <Compile Include="CRUD\IRepository.cs" />
+    <Compile Include="CRUD\Entities\Sort.cs" />
+    <Compile Include="CRUD\Entities\Track.cs" />
+    <Compile Include="CRUD\Trackable.cs" />
+    <Compile Include="CRUD\Entities\User.cs" />
     <Compile Include="Utils\MD5HashGenerator.cs" />
   </ItemGroup>
   <ItemGroup>
