--- a/backend/Business Specific Logic/Business Specific Logic.csproj
+++ b/backend/Business Specific Logic/Business Specific Logic.csproj
@@ -75,82 +75,23 @@
   <ItemGroup>
     <Compile Include="Auth\AuthRepository.cs" />
     <Compile Include="Auth\AuthContext.cs" />
-    <Compile Include="EF\cat_ConcernType.cs" />
-    <Compile Include="EF\cat_ProductLine.cs" />
-    <Compile Include="EF\cat_Result.cs" />
-    <Compile Include="EF\cat_Status.cs" />
-    <Compile Include="EF\CQAContext.cs" />
-    <Compile Include="EF\CQAHeader.cs" />
-    <Compile Include="EF\CQALine.cs" />
-    <Compile Include="EF\CQANumber.cs" />
-    <Compile Include="Entities\CQANumber.cs" />
-    <Compile Include="Entities\CQALine.cs" />
-    <Compile Include="Entities\CQAHeader.cs" />
-    <Compile Include="Entities\cat_Status.cs" />
-    <Compile Include="Entities\cat_Result.cs" />
-    <Compile Include="Entities\cat_ProductLine.cs" />
-    <Compile Include="Entities\cat_ConcernType.cs" />
-    <Compile Include="FS\Customer\FSCustomer.cs" />
-    <Compile Include="FS\Customer\FSCustomerLogic.cs" />
+    <Compile Include="EF\CAPAINVContext.cs" />
+    <Compile Include="EF\cat_TicketType.cs" />
+    <Compile Include="EF\InventoryEvent.cs" />
+    <Compile Include="EF\MOTagCount.cs" />
+    <Compile Include="EF\MOTagHeader.cs" />
+    <Compile Include="EF\Ticket.cs" />
+    <Compile Include="EF\TicketCount.cs" />
     <Compile Include="FS\FSContext.cs" />
     <Compile Include="FS\FSEntity.cs" />
     <Compile Include="FS\FSReadOnlyRepository.cs" />
     <Compile Include="FS\Item\FSItemLogic.cs" />
     <Compile Include="FS\Item\FSItem.cs" />
-    <Compile Include="Logic\catConcernTypeLogic.cs" />
-    <Compile Include="Logic\catResultLogic.cs" />
-    <Compile Include="Logic\catStatusLogic.cs" />
-    <Compile Include="Logic\CQALineLogic.cs" />
     <Compile Include="Logic\UserLogic.cs" />
-    <Compile Include="Logic\CQALogic.cs" />
     <Compile Include="MainContext.cs" />
-    <Compile Include="Migrations\201612132233409_Initial.cs" />
-    <Compile Include="Migrations\201612132233409_Initial.Designer.cs">
-      <DependentUpon>201612132233409_Initial.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201612132243483_AddingUserAndTrack.cs" />
-    <Compile Include="Migrations\201612132243483_AddingUserAndTrack.Designer.cs">
-      <DependentUpon>201612132243483_AddingUserAndTrack.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201702072331555_OptionalCustomerForCQAHeader.cs" />
-    <Compile Include="Migrations\201702072331555_OptionalCustomerForCQAHeader.Designer.cs">
-      <DependentUpon>201702072331555_OptionalCustomerForCQAHeader.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201703272108109_StandarizingReusable.cs" />
-    <Compile Include="Migrations\201703272108109_StandarizingReusable.Designer.cs">
-      <DependentUpon>201703272108109_StandarizingReusable.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201704102355332_UserIsDocument.cs" />
-    <Compile Include="Migrations\201704102355332_UserIsDocument.Designer.cs">
-      <DependentUpon>201704102355332_UserIsDocument.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201704111628294_CQANumberUnique.cs" />
-    <Compile Include="Migrations\201704111628294_CQANumberUnique.Designer.cs">
-      <DependentUpon>201704111628294_CQANumberUnique.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201704111639203_RemovingCQAHeaderFromCQANumber.cs" />
-    <Compile Include="Migrations\201704111639203_RemovingCQAHeaderFromCQANumber.Designer.cs">
-      <DependentUpon>201704111639203_RemovingCQAHeaderFromCQANumber.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201704121835127_ReplaceCustomerByFSCustomer.cs" />
-    <Compile Include="Migrations\201704121835127_ReplaceCustomerByFSCustomer.Designer.cs">
-      <DependentUpon>201704121835127_ReplaceCustomerByFSCustomer.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201704122350512_RemovingCatParts.cs" />
-    <Compile Include="Migrations\201704122350512_RemovingCatParts.Designer.cs">
-      <DependentUpon>201704122350512_RemovingCatParts.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201704201730376_CQALineAttachments.cs" />
-    <Compile Include="Migrations\201704201730376_CQALineAttachments.Designer.cs">
-      <DependentUpon>201704201730376_CQALineAttachments.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201704211833389_CustomerNumber.cs" />
-    <Compile Include="Migrations\201704211833389_CustomerNumber.Designer.cs">
-      <DependentUpon>201704211833389_CustomerNumber.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201704282209271_EmailConfig.cs" />
-    <Compile Include="Migrations\201704282209271_EmailConfig.Designer.cs">
-      <DependentUpon>201704282209271_EmailConfig.cs</DependentUpon>
+    <Compile Include="Migrations\201705122018087_initial.cs" />
+    <Compile Include="Migrations\201705122018087_initial.Designer.cs">
+      <DependentUpon>201705122018087_initial.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\AuthConfiguration\201703272102025_InitialCreate.cs" />
     <Compile Include="Migrations\AuthConfiguration\201703272102025_InitialCreate.Designer.cs">
@@ -161,41 +102,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201612132233409_Initial.resx">
-      <DependentUpon>201612132233409_Initial.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201612132243483_AddingUserAndTrack.resx">
-      <DependentUpon>201612132243483_AddingUserAndTrack.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201702072331555_OptionalCustomerForCQAHeader.resx">
-      <DependentUpon>201702072331555_OptionalCustomerForCQAHeader.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201703272108109_StandarizingReusable.resx">
-      <DependentUpon>201703272108109_StandarizingReusable.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201704102355332_UserIsDocument.resx">
-      <DependentUpon>201704102355332_UserIsDocument.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201704111628294_CQANumberUnique.resx">
-      <DependentUpon>201704111628294_CQANumberUnique.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201704111639203_RemovingCQAHeaderFromCQANumber.resx">
-      <DependentUpon>201704111639203_RemovingCQAHeaderFromCQANumber.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201704121835127_ReplaceCustomerByFSCustomer.resx">
-      <DependentUpon>201704121835127_ReplaceCustomerByFSCustomer.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201704122350512_RemovingCatParts.resx">
-      <DependentUpon>201704122350512_RemovingCatParts.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201704201730376_CQALineAttachments.resx">
-      <DependentUpon>201704201730376_CQALineAttachments.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201704211833389_CustomerNumber.resx">
-      <DependentUpon>201704211833389_CustomerNumber.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201704282209271_EmailConfig.resx">
-      <DependentUpon>201704282209271_EmailConfig.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201705122018087_initial.resx">
+      <DependentUpon>201705122018087_initial.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\AuthConfiguration\201703272102025_InitialCreate.resx">
       <DependentUpon>201703272102025_InitialCreate.cs</DependentUpon>
@@ -211,7 +119,9 @@
       <Name>Reusable</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Entities\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
