--- a/backend/Business Specific Logic/App.config
+++ b/backend/Business Specific Logic/App.config
@@ -12,5 +12,6 @@
   </entityFramework>
   <connectionStrings>
     <add name="CQAConn" connectionString="data source=.\SQLEXPRESS;initial catalog=CQA;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="TravelersContext" connectionString="data source=rsserver;initial catalog=CAPA_TRAVELERS;persist security info=True;user id=sa;password=6rzq4d1;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
