--- a/backend/WEB API Main/Main/Web.config
+++ b/backend/WEB API Main/Main/Web.config
@@ -71,5 +71,10 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <connectionStrings></connectionStrings>
+  <connectionStrings>
+    <add name="TravelersContext" connectionString="data source=rsserver;initial catalog=CAPA_TRAVELERS;persist security info=True;user id=sa;password=6rzq4d1;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
+
+    <add name="FSConn" connectionString="data source=FSSERV;initial catalog=FSDBMR;persist security info=True;user id=sa;password=QwErTy16;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+
+  </connectionStrings>
 </configuration>
