Add Traveler Functionality added

--- a/backend/Business Specific Logic/Business Specific Logic.csproj
+++ b/backend/Business Specific Logic/Business Specific Logic.csproj
@@ -95,6 +95,10 @@
     <Compile Include="Migrations\201705261908158_TravelerIsaDocument.Designer.cs">
       <DependentUpon>201705261908158_TravelerIsaDocument.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201705292226015_DateNullable.cs" />
+    <Compile Include="Migrations\201705292226015_DateNullable.Designer.cs">
+      <DependentUpon>201705292226015_DateNullable.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\AuthConfiguration\201705242215545_initial.cs" />
     <Compile Include="Migrations\AuthConfiguration\201705242215545_initial.Designer.cs">
       <DependentUpon>201705242215545_initial.cs</DependentUpon>
@@ -120,6 +124,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201705261908158_TravelerIsaDocument.resx">
       <DependentUpon>201705261908158_TravelerIsaDocument.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201705292226015_DateNullable.resx">
+      <DependentUpon>201705292226015_DateNullable.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\AuthConfiguration\201705242215545_initial.resx">
       <DependentUpon>201705242215545_initial.cs</DependentUpon>
